# ci-log-intelligence

./: .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  architecture.md  codex_build_prompt.md  pyproject.toml  requirements.txt
.claude/memory/: MEMORY.md  README.md  progress_token_client_gap.md  project_purpose.md  release_ops_preferences.md  release_workflow.md  user_kuldeep.md
.codex/: config.toml
.github/workflows/: ci.yml  publish.yml
ci_log_intelligence/: __init__.py  ci_analysis.py  ci_report_builder.py  progress.py  signals.py
ci_log_intelligence/api/: __init__.py
ci_log_intelligence/cli/: __init__.py  main.py
ci_log_intelligence/ingestion/: __init__.py
ci_log_intelligence/mcp/: __init__.py  _tools_internals.py  cache.py  server.py  tools.py
ci_log_intelligence/models/: __init__.py
ci_log_intelligence/parsing/: __init__.py
ci_log_intelligence/reducer/: __init__.py
ci_log_intelligence/storage/: __init__.py
ci_log_intelligence/summarizer/: __init__.py
ci_log_intelligence/utils/: __init__.py  logging.py  metrics.py
docs/: claude_desktop_config.example.json  phase1_design.md  phase2_plan.md
tests/: __init__.py
tests/golden/: __init__.py  test_golden_pipeline.py
tests/integration/: __init__.py  _e2e_helpers.py  test_build_error_detectors_pipeline.py  test_end_to_end_mcp_scenarios.py  test_end_to_end_scenarios.py  test_github_ci_pipeline.py  test_hash_mismatch_pipeline.py  test_mcp_pipeline.py  test_pipeline.py  test_test_framework_detectors_pipeline.py
tests/unit/: __init__.py  _mcp_stubs.py  test_build_error_gcc_detector.py  test_build_error_go_detector.py  test_build_error_make_detector.py  test_build_error_npm_detector.py  test_build_error_rust_detector.py  test_cli_main.py  test_comparison_analyzer.py  test_detector_framework.py  test_excerpt_rendering.py  test_failure_records.py  test_github_fetcher.py  test_github_grouping.py  test_github_resolver.py  test_go_test_fail_detector.py  test_hash_mismatch_detector.py  test_job_cache.py  test_junit_xml_detector.py  test_mcp_progress_bridge.py  test_mcp_tools.py  test_parsing_steps.py  test_progress_reporting.py  test_pytest_fail_detector.py  test_reducer_anchors.py  test_reducer_classification.py  test_reducer_clustering.py  test_reducer_expansion.py  test_reducer_merge.py  test_reducer_rank.py  test_reducer_scoring.py  test_reducer_suppression.py  test_rust_test_fail_detector.py  test_score_components.py  (+1 more)
(+30 files in other folders)
