[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-log-intelligence"
version = "0.2.1"
description = "MCP server that turns 50K-line CI logs into focused failure context for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Kuldeep Kumar"},
]
keywords = [
  "ci",
  "logs",
  "mcp",
  "model-context-protocol",
  "ai-agents",
  "github-actions",
  "debugging",
  "claude",
  "codex",
  "copilot",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "fastapi>=0.136.0",
  "fastmcp>=2.14.7",
  "pydantic>=2.12.0",
  "requests>=2.33.0",
  "uvicorn>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/kuldeep0020/ci-log-intelligence"
Repository = "https://github.com/kuldeep0020/ci-log-intelligence"
Issues = "https://github.com/kuldeep0020/ci-log-intelligence/issues"

[project.scripts]
ci-log-intel = "ci_log_intelligence.cli.main:main"
ci-log-intelligence-mcp = "ci_log_intelligence.mcp.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ci_log_intelligence*"]
